// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert option should work when insert option is function: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <link rel="stylesheet" type="text/css" href="simple.css"><style id="existing-style">.existing { color: yellow }</style>
<script charset="utf-8" src="simple.bundle.js"></script></head>
<body>
  <h1>Body</h1>
  <div class="target"></div>
  <iframe class="iframeTarget"></iframe>


</body></html>"
`;

exports[`insert option should work when insert option is function: errors 1`] = `[]`;

exports[`insert option should work when insert option is function: warnings 1`] = `[]`;

exports[`insert option should work when insert option is string: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id="existing-style">.existing { color: yellow }</style><link rel="stylesheet" type="text/css" href="simple.css">
<script charset="utf-8" src="simple.bundle.js"></script></head>
<body>
  <h1>Body</h1>
  <div class="target"></div>
  <iframe class="iframeTarget"></iframe>


</body></html>"
`;

exports[`insert option should work when insert option is string: errors 1`] = `[]`;

exports[`insert option should work when insert option is string: warnings 1`] = `[]`;

exports[`insert option should work without insert option: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id="existing-style">.existing { color: yellow }</style>
<link rel="stylesheet" type="text/css" href="simple.css"><script charset="utf-8" src="simple.bundle.js"></script></head>
<body>
  <h1>Body</h1>
  <div class="target"></div>
  <iframe class="iframeTarget"></iframe>


</body></html>"
`;

exports[`insert option should work without insert option: errors 1`] = `[]`;

exports[`insert option should work without insert option: warnings 1`] = `[]`;
